# hector-slam-wreck

./: .gitignore  2015-05-17-17-39-53.bag  README.md  gpioThing.sh
article/: article.tex  citations.bib
autonomous-rover/: obstacle-avoidance.py
code/: arduino_code  arduino_code.cpp  arduino_code_2  arduino_code_2.cpp  asd.cpp  laserDummy.cpp  lidar.launch  main.launch  output  outputEchoScan  sampleOutput  ultrasonic.py
code/autonomous-rover/: motor-direction-test.py  obstacle-avoidance-args.py  obstacle-avoidance.py  obstacle_avoidance.py  test-cmd-args.py
code/laser-module/: .gitignore  CMakeLists.txt  readme.md
code/laser-module/src/: CMakeLists.txt  laser.c
code/laser_scan_publisher_tutorial/: CMakeLists.txt
code/ultrasonic-module/: ultrasonic.py
latex/: P2.tex
latex/sections/: ch1-intro.tex.bak  ch1-intro_Emil.tex  ch1-intro_Emil.tex.bak  ch3-problemdefinition.tex  ch4-description.tex  ch4-specifications.tex  ch5-discussion.tex  ch6-1-latex.tex  ch6-conclusion.tex  frontpage.tex  preface.tex  titlepage.tex
latex/setup/: macros.tex~  preamble.tex~
lidarlite_scan/: CMakeLists.txt  package.xml
lidarlite_scan/src/: lidarLite.c
presentation/: presentation.tex
presentation/sections/: antal.tex  emil.tex  gustavo.tex  michal.tex  thomas.tex
presentation/setup/: preamble.tex  title.tex
process-analysis/: process-analysis.tex
process-analysis/sections/: appendix.tex  courses.tex  documentation.tex  frontpage.tex  group-work.tex  (+4 more)
report/: P2.tex  citations 2.bib  citations.bib
tests/: motor_pwm_test.py  triple-ultrasonic-test.py
(+64 files in other folders)
