<?xml version="1.0"?>
<package>
  <name>lidarlite_scan</name>
  <version>1.0.0</version>
  <description>The lidarlite_scan package</description>

  <maintainer email="anthonymonori@gmail.com">Antal János Monori<maintainer>

  <license>BSD</license>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
