cmake_minimum_required (VERSION 2.6)
set(CMAKE_VERBOSE_MAKEFILE ON)
project (lidarTest)
SET(GCC_FLAGS "-Wl --verbose -v --wackyargument")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC__FLAGS}" )
SET(LINK_FLAGS    "-t")
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
include_directories(include)
add_executable(StartLaser src/laser.c src/lidarLite.c include/lidarLite.h)
target_link_libraries (StartLaser wiringPi wiringPiDev pthread)
